tests/error/type_errors/negate_not_bool.py
from tests.error.util import guppy


@guppy
def foo() -> bool:
    return not "xxx"
